fix(layout): removes the double scrollbar and prevents header overwriting

--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -3,6 +3,7 @@
 
 .header {
     @include dimension($width: 100%, $height: 91px);
+    min-height: 91px;
     @include flex($justifyContent: start);
     padding-left: 28px;
     background-color: $font-text-color;
