--- a/src/components/Layout/Layout.module.scss
+++ b/src/components/Layout/Layout.module.scss
@@ -9,6 +9,7 @@
 
 .mainContainer {
     @include dimension($height: 100%);
+    min-height: 0; 
     display: flex;
     flex: 1;
 }
