--- a/src/main.scss
+++ b/src/main.scss
@@ -5,10 +5,11 @@
 html, body{
   margin: 0 auto; 
   height: 100%;
+  min-height: 100%; 
 }
 
 main {
-  margin: 0 auto; 
+  margin: 0 auto;  
   max-width: 1440px;
 }
 
